--- a/helm/app/templates/dashboard-svc.yaml
+++ b/helm/app/templates/dashboard-svc.yaml
@@ -1,4 +1,4 @@
-{{- if and (include "parse.host" .) .Values.dashboard.enabled -}}
+{{- if .Values.dashboard.enabled -}}
 apiVersion: v1
 kind: Service
 metadata:
